@@ -2,7 +2,7 @@
 # my simple makefile act as something like a user interface
 #
 
-MODULES = pics configs scripts bin Documentation raspi2 schematics
+MODULES = pics configs scripts bin Documentation raspi2 schematics etc
 MODULES_BUILD = libhelper lcd2004_i2c sensor_pi
 MODULES_EXTRA = kernel external
 
@@ -16,10 +16,9 @@ all::
 	@echo "| make build              -> build all code subfolders      |"
 	@echo "| make clean              -> clean all dir/subdirs          |"
 	@echo "| make distclean          -> clean + kernel folder          |"
-	@echo "| make install            -> install some scripts to        |"
-	@echo "|                            $(HOME)/bin              |"
-	@echo "| make uninstall          -> remove scripts from            |"
-	@echo "|                            $(HOME)/bin              |"
+	@echo "| make install            -> install all to $(HOME)/... "
+	@echo "| make uninstall          -> remove all from $(HOME)/..."
+	@echo "| make deploy             -> install bin's to /usr/bin      |"
 	@echo "+-----------------------------------------------------------+"
 
 clean::
@@ -31,10 +30,13 @@ distclean: clean
 	for dir in $(MODULES_EXTRA); do (cd $$dir && $(MAKE) $@); done
 
 install::
-	@echo "Nothing to install"
+	for dir in $(MODULES_BUILD); do (cd $$dir && $(MAKE) $@); done
 
 uninstall::
-	@echo "Nothing to uninstall"
+	for dir in $(MODULES_BUILD); do (cd $$dir && $(MAKE) $@); done
+
+deploy::
+	for dir in $(MODULES_BUILD); do (cd $$dir && $(MAKE) $@); done
 
 
 #
