@@ -1,0 +1,12 @@
+#
+# my simple makefile act as something like a user interface
+#
+
+all::
+	@echo Cheers
+
+clean::
+	rm -f *~
+	rm -f .*~
+
+distclean: clean
