@@ -1,0 +1,15 @@
+runit service definition
+========================
+
+Note: you have to change the I2C config!
+
+lcd_daemon
+----------
+
+The LCD daemon -> pcf8574_lcdd.
+
+
+sensor_daemon
+-------------
+
+The sensor daemon -> sensor_pid.
