@@ -1,0 +1,2 @@
+#!/bin/sh
+exec /usr/bin/pcf8574_lcdd -i /dev/i2c-1 -a 22 2>&1
