@@ -1,2 +1,0 @@
-#!/usr/bin/env bash
-./pcf8574_lcdd -i /dev/i2c-1 -a 22 -d
